fix navbar positioning on collapse

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1258,7 +1258,6 @@ a:hover {
 
 
 .greet-splashbuttons {
-  width: 500px;
   font-weight: bolder;
   color: black;
   text-align: right;
